<!-- Meet Patel N01460090 Section:- RNB -->
<resources>
    <string name="app_name">MeetPatelN01460090</string>
    <string name="MeetMenuItem1">Camera</string>
    <string name="MeetFragmentTextView">Meet Patel N01460090</string>
    <string name="Pass">Enter Password</string>
    <string name="PasswordError">Invalid Input</string>
    <string name="btn_text">Button</string>
    <string name="colour_green">Colour: Green</string>
    <string name="colour_red">Colour: Red</string>
    <string name="colour_pink">Colour: Pink</string>
    <string name="width_14f">Width: 14f</string>
    <string name="width_18f">Width: 18f</string>
    <string name="width_22f">Width: 22f</string>
    <string name="firstName_thirdFrag">Meet</string>
    <string name="lastName_thirdFrag">Patel</string>
    <string name="Passed_String">PassedString</string>
    <string name="PassDataMessage">Data Stored and Passed to Third Fragment</string>
    <string name="Call_Btn_Text">Make a Call</string>
    <string name="PermissionDenied">Permission Denied</string>
    <string name="ExitConfirmation">Do you want to Exit?</string>
    <string name="ExitYes">Yes</string>
    <string name="ExitNo">No</string>
    <string name="ExitAlertTitle">Meet Patel N01460090</string>
    <string name="CallNumber">tel:1234567899</string>
    <string name="Content_Desc">Image</string>
    <string name="PinkColorMenu">#FFC0CB</string>
    <string name="GreenColorMenu">Green</string>
    <string name="RedColorMenu">Red</string>
    <string name="Bottom_Menu_Item1">MeetTab</string>
    <string name="Bottom_Menu_Item2">PatelTab</string>
    <string name="Bottom_Menu_Item3">N01460090Tab</string>
    <string name="MeetFragmentName">Meet Fragment</string>
    <string name="PatelFragmentName">Patel Fragment</string>
    <string name="N01460090FragmentName">N01460090 Fragment</string>
</resources>