<?xml version="1.0" encoding="utf-8"?>
<!-- Meet Patel N01460090 Section:- RNB -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8CB"
    tools:context=".N01460090Tab">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/MeetTextViewFirstNameThirdFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginTop="12sp"
        android:fontFamily="serif"
        android:rotation="-45"
        android:text="@string/firstName_thirdFrag"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/MeetTextViewLastNameThirdFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="12sp"
        android:rotation="45"
        android:text="@string/lastName_thirdFrag"
        android:textColor="@color/black"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/MeetTextViewPassedDataThirdFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100sp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/MeetMakeCallButtonThirdFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#06113C"
        android:text="@string/Call_Btn_Text"
        android:textColor="#EEEEEE"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/MeetTextViewFragName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:fontFamily="@font/amaranth_italic"
        android:text="@string/N01460090FragmentName"
        android:textAlignment="viewEnd"
        android:textColor="#0900FF"
        android:textSize="28sp" />


</FrameLayout>