<?xml version="1.0" encoding="utf-8"?>
<!-- Meet Patel N01460090 Section:- RNB -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeetTab"
    android:background="#DDDDDD">

    <TextView
        android:id="@+id/MeetTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/MeetFragmentTextView"
        android:textAlignment="center"
        android:textColor="#FB0303"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/MeetPassword"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="password"
        android:digits="abcdefghijklmnopqrstuvwxyz"
        android:ems="10"
        android:hint="@string/Pass"
        android:inputType="textPassword"
        android:maxLength="6"
        android:textColorHint="#757575"
        android:textSize="22dp" />

    <Button
        android:id="@+id/MeetButton"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/btn_text" />


</FrameLayout>